force-app/main/default/objects/Flavor_Change__c/Flavor_Change__c.object-meta.xml
<CustomObject>
    <label>Flavor Change</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Flavor Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flavor Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>