force-app/main/default/objects/Flavor_Change__c/fields/FS_7000_Brand_Selection_Change__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Brand_Selection_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track if values in 7000 Series Agitated Brands Selections,7000 Series Brands Option Selections and 7000 Series Static Brands Selections changed</description>
    <label>7000 Brand Selection Change</label>
    <type>Checkbox</type>
</CustomField>