force-app/main/default/objects/Flavor_Change__c/fields/FS_7000_New_Hide_Show_Dasani_Effct_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_New_Hide_Show_Dasani_Effct_Date__c</fullName>
    <label>New Hide/Show Dasani Effective Date</label>
    <type>Date</type>
</CustomField>