force-app/main/default/objects/Flavor_Change__c/fields/FS_7000_Series_Brand_Selection_EF_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Brand_Selection_EF_Date__c</fullName>
    <label>7000  Brand Selection  Effective Date</label>
    <type>Date</type>
</CustomField>