force-app/main/default/objects/Flavor_Change__c/fields/FS_7000S_New_Spicy_Cherry_EF_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_7000S_New_Spicy_Cherry_EF_Date__c</fullName>
    <label>New Spicy Cherry Effective Date</label>
    <type>Date</type>
</CustomField>