force-app/main/default/objects/Flavor_Change__c/fields/FS_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_ACN__c</fullName>
    <description>ACN of Outlet</description>
    <formula>FS_Outlet_HQ_Chain__r.FS_ACN__c +  FS_Installation__r.Outlet_ACN__c + FS_Outlet_Dispenser__r.FS_ACN_NBR__c</formula>
    <inlineHelpText>Customer ACN</inlineHelpText>
    <label>ACN</label>
    <type>Text</type>
</CustomField>