force-app/main/default/objects/Flavor_Change__c/fields/FS_All_Dispensers_Present__c.field-meta.xml
<CustomField>
    <fullName>FS_All_Dispensers_Present__c</fullName>
    <formula>If( FS_Total_Number_of_Dispensers__c &gt; FS_Outlet_HQ_Chain__r.FS_of_Installations__c ,&quot;No.  Please add additional dispenser(s).&quot;,
If(FS_Total_Number_of_Dispensers__c &lt; FS_Outlet_HQ_Chain__r.FS_of_Installations__c,&quot;Extra dispenser(s) is/are present.  Please confirm.&quot;,&quot;Yes&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Dispensers Present??</label>
    <type>Text</type>
</CustomField>