force-app/main/default/objects/Flavor_Change__c/fields/FS_All_Fields_Entered__c.field-meta.xml
<CustomField>
    <fullName>FS_All_Fields_Entered__c</fullName>
    <formula>If(AND(TEXT( FS_GS1_New_Hide_Show_Dasani__c )&lt;&gt;&quot;&quot; , TEXT( FS_GS2_New_Hide_Show_Dasani__c )&lt;&gt;&quot;&quot; ,
TEXT(FS_GS1_New_Hide_Show_Water_Button__c) &lt;&gt;&quot;&quot; , TEXT(FS_GS2_New_Hide_Show_Water_Button__c)&lt;&gt;&quot;&quot; ,
TEXT( FS_GS1_New_Spicy_Cherry__c ) &lt;&gt;&quot;&quot; , TEXT( FS_GS2_New_Spicy_Cherry__c ) &lt;&gt;&quot;&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Fields Entered??</label>
    <type>Checkbox</type>
</CustomField>