force-app/main/default/objects/Flavor_Change__c/fields/FS_Both_Present__c.field-meta.xml
<CustomField>
    <fullName>FS_Both_Present__c</fullName>
    <formula>IF( AND(FS_Crew_Serve_Present__c ,  FS_Self_Serve_Present__c ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Both Present</label>
    <type>Checkbox</type>
</CustomField>