force-app/main/default/objects/Flavor_Change__c/fields/FS_Cancle_Flavor_Change__c.field-meta.xml
<CustomField>
    <fullName>FS_Cancle_Flavor_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>