force-app/main/default/objects/Flavor_Change__c/fields/FS_Crew_Serve_Present__c.field-meta.xml
<CustomField>
    <fullName>FS_Crew_Serve_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>8000 Series Present</label>
    <type>Checkbox</type>
</CustomField>