force-app/main/default/objects/Flavor_Change__c/fields/FS_Current_Hide_Show_Dasani__c.field-meta.xml
<CustomField>
    <fullName>FS_Current_Hide_Show_Dasani__c</fullName>
    <formula>IF(FS_Outlet_HQ_Chain__r.FS_of_Hide_Dasani_Changes__c &gt; 0,&quot;Hide&quot;,
IF(FS_Outlet_HQ_Chain__r.FS_of_Show_Dasani_Changes__c &gt; 0,&quot;Show&quot;,
IF( AND (FS_Outlet_HQ_Chain__r.FS_of_Hide_Dasani_Changes__c &gt; 0, FS_Outlet_HQ_Chain__r.FS_of_Show_Dasani_Changes__c &gt; 0),&quot;Hide and Show are Present&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Hide/Show Dasani</label>
    <type>Text</type>
</CustomField>