force-app/main/default/objects/Flavor_Change__c/fields/FS_Current_Spicy_Cherry__c.field-meta.xml
<CustomField>
    <fullName>FS_Current_Spicy_Cherry__c</fullName>
    <formula>IF(  FS_Outlet_HQ_Chain__r.FS_of_Pibb_Changes__c &gt; 0, &quot;Pibb/Pibb Zero&quot;,
IF(  FS_Outlet_HQ_Chain__r.FS_of_Dr_Pepper_Changes__c &gt; 0, &quot;Dr Pepper/Diet Dr Pepper&quot;,
IF( AND( FS_Outlet_HQ_Chain__r.FS_of_Pibb_Changes__c &gt; 0, FS_Outlet_HQ_Chain__r.FS_of_Dr_Pepper_Changes__c &gt; 0),&quot;Pibb and Dr Pepper Present&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Spicy Cherry</label>
    <type>Text</type>
</CustomField>