force-app/main/default/objects/Flavor_Change__c/fields/FS_Dasani_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_Dasani_Check__c</fullName>
    <formula>If ( AND (TEXT( FS_GS1_New_Hide_Show_Dasani__c)=
TEXT( FS_GS2_New_Hide_Show_Dasani__c), 
TEXT( FS_GS1_New_Hide_Show_Dasani__c)&lt;&gt;&quot;&quot; , 
TEXT( FS_GS2_New_Hide_Show_Dasani__c)&lt;&gt;&quot;&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dasani Check</label>
    <type>Checkbox</type>
</CustomField>