force-app/main/default/objects/Flavor_Change__c/fields/FS_Dual_Flavor_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_Dual_Flavor_Check__c</fullName>
    <formula>If( AND( FS_Self_Serve_Present__c ,FS_Crew_Serve_Present__c ,  FS_All_Fields_Entered__c , FS_Dasani_Check__c , FS_Pibb_Pepper_Check__c , FS_Water_Check__c),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dual Flavor Check</label>
    <type>Checkbox</type>
</CustomField>