force-app/main/default/objects/Flavor_Change__c/fields/FS_Entering_COM__c.field-meta.xml
<CustomField>
    <fullName>FS_Entering_COM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS COM_P</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Flavor_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>