force-app/main/default/objects/Flavor_Change__c/fields/FS_Estimated_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Estimated_Conversion_Date__c</fullName>
    <label>Estimated Conversion Date</label>
    <type>Date</type>
</CustomField>