force-app/main/default/objects/Flavor_Change__c/fields/FS_Final_Dual_Flavor_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_Final_Dual_Flavor_Check__c</fullName>
    <formula>If( AND(FS_Both_Present__c =true , FS_Dual_Flavor_Check__c =TRUE),TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Dual Flavor Check</label>
    <type>Checkbox</type>
</CustomField>