force-app/main/default/objects/Flavor_Change__c/fields/FS_Flavor_Collection_Request_Completed__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_Collection_Request_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flavor Collection Req Completed by CDM</label>
    <type>Checkbox</type>
</CustomField>