force-app/main/default/objects/Flavor_Change__c/fields/FS_Flavor_to_be_Added__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_to_be_Added__c</fullName>
    <label>Flavor to be Added</label>
    <type>TextArea</type>
</CustomField>