force-app/main/default/objects/Flavor_Change__c/fields/FS_Flavor_to_be_Removed__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_to_be_Removed__c</fullName>
    <label>Flavor to be Removed</label>
    <type>TextArea</type>
</CustomField>