force-app/main/default/objects/Flavor_Change__c/fields/FS_GS1_KO03__c.field-meta.xml
<CustomField>
    <fullName>FS_GS1_KO03__c</fullName>
    <formula>If(AND(ISPICKVAL( FS_GS1_New_Spicy_Cherry__c ,&quot;Dr. Pepper/Diet Dr. Pepper&quot;) , ISPICKVAL( FS_GS1_New_Hide_Show_Water_Button__c , &quot;Show&quot;) , ISPICKVAL( FS_GS1_New_Hide_Show_Dasani__c , &quot;Show&quot;)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KO03</label>
    <type>Checkbox</type>
</CustomField>