force-app/main/default/objects/Flavor_Change__c/fields/FS_GS1_New_Hide_Show_Dasani_EF_DATE__c.field-meta.xml
<CustomField>
    <fullName>FS_GS1_New_Hide_Show_Dasani_EF_DATE__c</fullName>
    <label>New Hide/Show Dasani Effective Date</label>
    <type>Date</type>
</CustomField>