force-app/main/default/objects/Flavor_Change__c/fields/FS_GS1_New_Spicy_Cherry__c.field-meta.xml
<CustomField>
    <fullName>FS_GS1_New_Spicy_Cherry__c</fullName>
    <label>New Spicy Cherry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pibb/Pibb Zero</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper</fullName>
            </value>
            <value>
                <fullName>Pibb/Pibb Zero/Add FUZE/Remove Dasani</fullName>
            </value>
            <value>
                <fullName>Pibb/Pibb Zero/Add FUZE/Remove Powerade</fullName>
            </value>
            <value>
                <fullName>Pibb/Pibb Zero/Add FUZE/Remove Vitaminwater</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Dasani</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Vitaminwater</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Powerade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>