force-app/main/default/objects/Flavor_Change__c/fields/FS_GS2_New_Hide_Show_Dasani__c.field-meta.xml
<CustomField>
    <fullName>FS_GS2_New_Hide_Show_Dasani__c</fullName>
    <label>New Hide/Show Dasani</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>