force-app/main/default/objects/Flavor_Change__c/fields/FS_GS2_New_Hide_Show_Water_Button_EF_Dt__c.field-meta.xml
<CustomField>
    <fullName>FS_GS2_New_Hide_Show_Water_Button_EF_Dt__c</fullName>
    <label>New Hide/Show Water Button EffectiveDate</label>
    <type>Date</type>
</CustomField>