force-app/main/default/objects/Flavor_Change__c/fields/FS_Outlet_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Dispenser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet Dispenser</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>Flavor Changes</relationshipLabel>
    <relationshipName>Flavor_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>