force-app/main/default/objects/Flavor_Change__c/fields/FS_Outlet_HQ_Chain__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_HQ_Chain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet/Headquarters/Chain</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Flavor Changes</relationshipLabel>
    <relationshipName>Flavor_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>