force-app/main/default/objects/Flavor_Change__c/fields/FS_Overall_Dispensers__c.field-meta.xml
<CustomField>
    <fullName>FS_Overall_Dispensers__c</fullName>
    <formula>FS_Total_Number_of_Dispensers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Dispensers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>