force-app/main/default/objects/Flavor_Change__c/fields/FS_Pibb_Pepper_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_Pibb_Pepper_Check__c</fullName>
    <formula>If(AND(TEXT( FS_GS1_New_Spicy_Cherry__c) = TEXT( FS_GS2_New_Spicy_Cherry__c) , TEXT( FS_GS1_New_Spicy_Cherry__c)&lt;&gt;&quot;&quot; , TEXT( FS_GS2_New_Spicy_Cherry__c)&lt;&gt;&quot;&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pibb/Pepper Check</label>
    <type>Checkbox</type>
</CustomField>