force-app/main/default/objects/Flavor_Change__c/fields/FS_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>FS_Related_Object__c</fullName>
    <formula>HYPERLINK(
    &#39;/&#39; +FS_Outlet_HQ_Chain__c + FS_Installation__c+ FS_Outlet_Dispenser__c, FS_Outlet_HQ_Chain__r.Name + FS_Installation__r.Name + FS_Outlet_Dispenser__r.Name)</formula>
    <label>Related Object</label>
    <type>Text</type>
</CustomField>