force-app/main/default/objects/Flavor_Change__c/fields/FS_Spicy_Cherry_Change__c.field-meta.xml
<CustomField>
    <fullName>FS_Spicy_Cherry_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to track spicy cherry value change in Flavor Change. Which is used in a workflow to trigger email notification.</description>
    <label>Spicy Cherry Change</label>
    <type>Checkbox</type>
</CustomField>