force-app/main/default/objects/Flavor_Change__c/fields/FS_Spicy_Cherry_Flavor_Change__c.field-meta.xml
<CustomField>
    <fullName>FS_Spicy_Cherry_Flavor_Change__c</fullName>
    <formula>IF( OR( 
AND(FS_Current_Spicy_Cherry__c = &quot;Pibb/Pibb Zero&quot;,  
TEXT(FS_GS1_New_Spicy_Cherry__c)= &quot;Dr Pepper/Diet Dr Pepper&quot;) , 

AND( FS_Current_Spicy_Cherry__c =  &quot;Dr Pepper/Diet Dr Pepper&quot; , TEXT(FS_GS1_New_Spicy_Cherry__c)= &quot;Pibb/Pibb Zero&quot;),

AND(FS_Current_Spicy_Cherry__c = &quot;Pibb/Pibb Zero&quot;,
TEXT(FS_GS2_New_Spicy_Cherry__c)= &quot;Dr Pepper/Diet Dr Pepper&quot;), 

AND( FS_Current_Spicy_Cherry__c =  &quot;Dr Pepper/Diet Dr Pepper&quot; , TEXT(FS_GS2_New_Spicy_Cherry__c)= &quot;Pibb/Pibb Zero&quot;)
),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spicy Cherry Flavor Change</label>
    <type>Checkbox</type>
</CustomField>