force-app/main/default/objects/Flavor_Change__c/fields/FS_X7000_Series_Present__c.field-meta.xml
<CustomField>
    <fullName>FS_X7000_Series_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>7000 Series Present</label>
    <type>Checkbox</type>
</CustomField>