force-app/main/default/objects/Flavor_Change__c/fields/Total_Number_of_Dispensers__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Dispensers__c</fullName>
    <label>Total Number of Dispensers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>