force-app/main/default/objects/Flavor_Change__c/validationRules/FC_7000_Series_Brnd_sel_effdt_required.validationRule-meta.xml
<ValidationRule>
    <fullName>FC_7000_Series_Brnd_sel_effdt_required</fullName>
    <active>true</active>
    <errorConditionFormula>And(OR(!ISBlank(FS_7000_Series_Statics_Brands_Selection__c), !ISBlank(FS_7000_Series_Agitated_Brands_Selection__c)),isBlank(FS_7000_Series_Brand_Selection_EF_Date__c))</errorConditionFormula>
    <errorDisplayField>FS_7000_Series_Brand_Selection_EF_Date__c</errorDisplayField>
    <errorMessage>This is mandatory if &#39;7000 Series Brands Option Selections&#39; Fields is filled</errorMessage>
</ValidationRule>