force-app/main/default/objects/Flavor_Change__c/validationRules/FS_7000_Series_Dasani_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_7000_Series_Dasani_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsBlank(Text(FS_7000_New_Hide_Show_Dasani__c)),!IsBlank(FS_7000_New_Hide_Show_Dasani_Effct_Date__c))</errorConditionFormula>
    <errorDisplayField>FS_7000_New_Hide_Show_Dasani__c</errorDisplayField>
    <errorMessage>&#39;New Hide/Show Dasani &#39; is required if you have  &#39;New Hide/Show Dasani Effective Date&#39;</errorMessage>
</ValidationRule>