force-app/main/default/objects/Flavor_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FS_7000_Series_Statics_Brands_Selection__c</columns>
    <columns>FS_Installation__c</columns>
    <columns>FS_Outlet_Dispenser__c</columns>
    <columns>FS_Outlet_HQ_Chain__c</columns>
    <columns>FS_7000_Brand_Selection_Change__c</columns>
    <columns>FS_7000_Series_Brand_Selection_EF_Date__c</columns>
    <columns>FS_7000_Series_Agitated_Brands_Selection__c</columns>
    <columns>FS_Crew_Serve_Present__c</columns>
    <columns>FS_Self_Serve_Present__c</columns>
    <columns>FS_7000S_New_Spicy_Cherry__c</columns>
    <columns>FS_GS1_New_Spicy_Cherry__c</columns>
    <columns>FS_GS2_New_Spicy_Cherry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>